fixed the spacing

--- a/src/assets/styles/override.css
+++ b/src/assets/styles/override.css
@@ -142,5 +142,10 @@
   width: 15%;
 }
 
+.card * {
+  margin: 0;
+  padding: 0;
+}
+
 
 
